# hands-to-text

./: .dockerignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: wf.yml
application/: Dockerfile  app.py  gunicorn.conf.py  pyproject.toml  run.py  stream.py  working.py
application/app/: __init__.py  config.py
application/app/routes/: chat.py  text.py  video.py
application/app/templates/: index.html
application/app/utils/: camera.py  chat_client.py  frames.py  logging.py
application/static/: styles.css
application/templates/: index.html
dataprep/: .dockerignore  Dockerfile  README.md  pyproject.toml
dataprep/httdataprep/: cli.py  collect.py  dataset.py  statistics.py  storage.py  utils.py
dataprep/httdataprep/assets/: encsa.txt
hands_to_text/: collect_data.py  data.pickle  dataset.py  main.py  train.py
models/: model.pickle
package/: README.md  data.pickle  experiments.md  main.py  pyproject.toml  tests_summary.md
package/hands_to_text/: __init__.py
package/hands_to_text/text/: __init__.py  abstract.py  processor.py  strategy.py
package/hands_to_text/video/: __init__.py  images.py  models.py  processor.py
package/hands_to_text/video/services/: abstract.py  adaboost.py  cnn.py  leenet.py  resnet.py  rf.py
package/htt/: __init__.py  general.py
package/htt/text/: strategy.py
package/htt/video/: images.py
package/scripts/: collect_data.py  dataset.py  train.py
package/tests/: conftest.py  experiments.md  integration.py  manual_test.py  test_integration.py  test_text.py  text_test.py  video_test.py
package/tests/examples/: recordvid.py
webapp/: README.md  openapi.yml  pyproject.toml
webapp/httfe/: main.py
webapp/httfe/core/: config.py  log.py
webapp/httfe/routes/: __init__.py  chat.py  text.py  video.py
webapp/httfe/schemas/: camera.py  chat.py  general.py  text.py
webapp/httfe/services/: camera.py  chat.py  text.py
webapp/httfe/static/: styles.css
webapp/httfe/templates/: index.html
webapp/tests/: chat_test.py
