
[tool.poetry]
name = "htt-fe"
version = "0.0.0"
authors = ["Popis <piotrpopis98@icloud.com>"]
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
opencv-python = ">=4.10.0.84"
gunicorn = "^22.0.0"
g4f = {extras = ["all"], version = "^0.3.2.3"}
hands-to-text = {path = "../package"}

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '^v?((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)'

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-report html --cov-report term-missing --junit-xml py-junit.xml"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
per-file-ignores = "__init__.py:F401"
ignore = []

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.bandit]
skips = ["B403", "B301"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
