
[tool.poetry]
package-mode = true
name = "httdataprep"
version = "0.0.0"
authors = ["Popis <piotrpopis98@icloud.com>"]
description = "Package for collecting data and transforming to dataset"
readme = "README.md"
include = ["assets/*"]

[tool.poetry.scripts]
httdataprep = "httdataprep.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = ">=4.10.0.84"
mediapipe = ">=0.10.14"
numpy = "^2.0.0"
typer = "^0.12.4"
google-auth = "^2.34.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.142.0"
cryptography = "^43.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '^v?((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)'

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-report html --cov-report term-missing --junit-xml py-junit.xml"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
per-file-ignores = "__init__.py:F401"
ignore = []

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.bandit]
skips = ["B403", "B301"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
