
[tool.poetry]
name = "httfe"
version = "0.0.0"
authors = ["Popis <piotrpopis98@icloud.com>"]
description = "Web application for sign language talk with chat gpt "
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = ">=4.10.0.84"
mediapipe = ">=0.10.15"
hands-to-text = { path = "../package" }
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
fastapi = "^0.115.2"
openai = "^1.51.2"
uvicorn = "^0.31.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '^v?((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)'

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report xml --cov-report html --cov-report term-missing --junit-xml coverage-webapp.xml"

[tool.coverage.run]
source = ["httfe"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
per-file-ignores = "__init__.py:F401"
ignore = ["E501"]
exclude = ["tests/*", "test_*.py", "*/test_*"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.bandit]
skips = ["B403", "B301"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
